<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="#00b0a5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:background="#11837b"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="#01b7a8"
            android:gravity="center" >

            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/jpeg" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="#eee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/insert"
            android:layout_width="match_parent"
            android:layout_height="45.0dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/linear"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/insertIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/insertIcon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/insert"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="#eee" />

        <LinearLayout
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="45.0dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/linear"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/updateIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/updateIcon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/update"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="#eee" />

        <LinearLayout
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="45.0dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/linear"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/deleteIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/deleteIcon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/delete"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="#eee" />

        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="45.0dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/linear"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/aboutIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/aboutIcon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="#eee" />

        <LinearLayout
            android:id="@+id/showMsm"
            android:layout_width="match_parent"
            android:layout_height="45.0dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/linear"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/MsmIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/searchIcon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/select"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="#eee" />
    </LinearLayout>

</LinearLayout>