<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#262a3b"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="#ffffffff"
                android:hint="@string/inputNumber"
                android:maxLength="15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="#ffffffff"
                android:ems="10"
                android:hint="@string/inputNumber"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp" >

        <Button
            android:id="@+id/LoginConfig"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/selectcolor"
            android:text="@string/loginConfig"
            android:textColor="#fff" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp" >

        <TextView
            android:id="@+id/RegConfig"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/newUser"
            android:textColor="#262a3b" />
    </RelativeLayout>

</LinearLayout>