<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45.0dp"
        android:background="#000" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45.0dp"
            android:background="@drawable/linetop" >

            <TextView
                android:id="@+id/aboutBack"
                style="@style/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/selectcolor"
            android:gravity="center" >

            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/jpeg" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="20sp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:gravity="center_horizontal"
                android:text="@string/Coypright" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="70sp" >

        <Button
            android:id="@+id/Logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7sp"
            android:background="@drawable/selectcolor"
            android:text="@string/Logout"
            android:textColor="#fff"
            android:textSize="16sp" />
    </FrameLayout>

</LinearLayout>